--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
             </div>
            
 
-           
-           <a id="btn-home-view" routerLink="/" routerLinkActive="active"><img id="logo" class="col-xs-4 col-sm-3 col-md-2 col-lg-2" [src]="logo" /></a>
+           <a id="btn-home-view"></a>
+           <a routerLink="/" routerLinkActive="active"><img id="logo" class="col-xs-4 col-sm-3 col-md-2 col-lg-2" [src]="logo" /></a>
             
            
            <main class="container col-xs-4 col-sm-3 col-sm-offset-3 col-md-offset-6 col-md-2 col-lg-2 col-lg-offset-6">
@@ -35,7 +35,7 @@
        </div>
 
        <div class="hidden-xs hidden-sm row" id="banniere">
-           <a routerLink="/index" routerLinkActive="active"><img class="hidden-xs hidden-sm col-md-12 col-lg-12" [src]="banniere" alt="banniere" /></a>
+           <a routerLink="/" routerLinkActive="active"><img class="hidden-xs hidden-sm col-md-12 col-lg-12" [src]="banniere" alt="banniere" /></a>
        </div> 
 
        <nav class="row">  
